--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,39 @@
 version: '3.8'
 services:
+  app:
+    build:
+      context: .
+    ports:
+      - "8080:8080"
+    depends_on:
+      - postgres
+      - redis
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/cachedb
+      - SPRING_DATASOURCE_USERNAME=cacheuser
+      - SPRING_DATASOURCE_PASSWORD=cachepass
+      - SPRING_REDIS_HOST=redis
+      - SPRING_REDIS_PORT=6379
+    networks:
+      - app-net
+
+  tests:
+    build:
+      context: .
+      target: builder
+    depends_on:
+      - postgres
+      - redis
+    command: mvn test
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/cachedb
+      - SPRING_DATASOURCE_USERNAME=cacheuser
+      - SPRING_DATASOURCE_PASSWORD=cachepass
+      - SPRING_REDIS_HOST=redis
+      - SPRING_REDIS_PORT=6379
+    networks:
+      - app-net
+
   postgres:
     image: postgres:15
     environment:
@@ -10,11 +44,19 @@ services:
       - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
+    networks:
+      - app-net
 
   redis:
     image: redis:7
     ports:
       - "6379:6379"
+    networks:
+      - app-net
 
 volumes:
   pgdata:
+
+networks:
+  app-net:
+    driver: bridge
