--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/cachedb
-spring.datasource.username=cacheuser
-spring.datasource.password=cachepass
+#spring.datasource.url=jdbc:postgresql://localhost:5432/cachedb
+#spring.datasource.username=cacheuser
+#spring.datasource.password=cachepass
 spring.jpa.hibernate.ddl-auto=update
 spring.cache.type=redis
-spring.redis.host=localhost
-spring.redis.port=6379
+#spring.redis.host=localhost
+#spring.redis.port=6379
